# projet_django

./: .env.production  Dockerfile  build.sh  compose.yaml  gunicorn.conf.py  pyproject.toml  render.yaml  requirements.txt  runtime.txt
apps/book/: views.py
apps/book/templates/book/: book_list.html
apps/booksRecommendation/: views.py
apps/collaboration/: urls.py  views.py
apps/collaboration/templates/collaboration/: collaboration_detail.html  collaborations.html  create_post.html  delete_post.html  delete_response.html  respond_post.html  responses_list.html  update_post.html  update_response.html
apps/templates/includes/: sidebar.html
core/: settings.py
