[tool.poetry]
name = "projet-django"
version = "0.1.0"
description = "Django application for book management"
authors = ["Vous <votre@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2"
gunicorn = "20.1.0"
psycopg2-binary = "2.9.11"
whitenoise = "6.8.1"
python-decouple = "3.8"
Pillow = "10.4.0"
stripe = "8.8.0"
dj-database-url = "0.5.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"